<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--https://material.io/resources/icons/?icon=perm_identity&style=baseline-->
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_relationship"
        android:icon="@drawable/ic_relationship"
        android:title="@string/title_relationship" />

    <item
        android:id="@+id/navigation_account_add"
        android:icon="@drawable/ic_add_account"
        android:title="@string/title_account_add" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_charts"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_mine"
        android:title="@string/title_notifications" />

</menu>
